# SimpleTranscriptionApp

./: .env.example  .gitignore  .gitmodules  README.md  dl_models_and_dataset.sh  docker-compose.yaml  docker-compose.yml  pyproject.toml  quickstart_local.sh  run_elastic_stack.sh  setup.sh  setup_dev_env.sh  tech_debt.txt
.github/workflows/: README.md  build_containers.yml
asr/: .dockerignore  Dockerfile  README.md  app.py  asr_api.py  demo_curl_script.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  run_client.sh  run_tests.sh
asr/app/: README.md  app.py  asr_api.py
asr/app/inference/: wav2vec2.py
asr/app/tests/: test_ping.py  test_transcription.py
asr/demo-client/: README.md  cv-decode.py
asr/enums/: file_formats.py
asr/inference/: wav2vec2.py
asr/tests/: test_ping.py  test_transcription.py
demo-client/: cv-decode.py  pyproject.toml  run_client.sh
demo_client/: cv-decode.py  pyproject.toml  run_client.sh  temp-cv-valid-dev.csv
deployment/: README.md  deploy.sh  login.sh
deployment-design/: README.md
deployment/terraform/: main.tf  network.tf  outputs.tf  vars.tf
elastic-backend/: Dockerfile  README.md  cv-index.py  cv-valid-dev.csv  docker-compose.yml  pyproject.toml  run_backend.sh
elastic-backend/config/: elasticsearch.yml
linter/: README.md  lint.sh  pyproject.toml  ruff.toml
search-ui/: Dockerfile  README.md  docker-compose.yml  run_searchui.sh
