[project]
name = "simpletranscriptionapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]==0.116.1",
    "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
# Enables unit and end to end tests
testing = [
    "pytest==8.4.1"
]

# Enables inference, disable during fast unit tests that exclude heavy dependencies
inference = [
    "transformers==4.55.2",
    "torch==2.8.0",
    "torchaudio==2.8.0"
]