[project]
name = "simpletranscriptionapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]==0.115.6",
]

[project.optional-dependencies]
# Enables unit and end to end tests
testing = [
    "pytest==8.4.1"
]

# Enables inference, disable during fast unit tests that exclude heavy dependencies
inference = [
    "transformers==4.55.2",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchcodec==0.6.0"
]

[tool.uv.sources]
torch = { index = "pytorch" }

# Important: Keeps image size low since only CPU inference is used (No CUDA etc.)
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
